syntax = "proto3";

package auth;

option java_multiple_files = true;  // Tạo một file Java cho mỗi message và service
option java_package = "com.vou.proto";  // Chỉ định package chung cho tất cả các lớp Java
option java_outer_classname = "AuthServiceProto";  // Tên của lớp Java chứa các lớp message và service

//Auth send to user
message UserIdMessage {
  string userId = 1;
}

message Empty {

}
//Auth send to ...

//Service
service AuthService {
  rpc sendUserId(UserIdMessage) returns (Empty);
}



